include/maplibre_native_c/map.h


typedef struct mln_map_options {
  uint32_t size;
  uint32_t width;
  uint32_t height;
  double scale_factor;
  uint32_t map_mode;
  bool fast_pfor_enabled;
} mln_map_options;
typedef struct mln_offline_region_definition {
  uint32_t size;
  uint32_t type;
  union {
    mln_offline_tile_pyramid_region_definition tile_pyramid;
    mln_offline_geometry_region_definition geometry;
  } data;
} mln_offline_region_definition;
typedef struct mln_offline_region_info {
  uint32_t size;
  mln_offline_region_id id;
  mln_offline_region_definition definition;
  const uint8_t* metadata;
  size_t metadata_size;
} mln_offline_region_info;
MLN_API mln_status mln_runtime_offline_region_create_start(
  mln_runtime runtime, const mln_offline_region_definition* definition,
  const uint8_t* metadata, size_t metadata_size,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_get_start(
  mln_runtime runtime, mln_offline_region_id region_id,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_regions_list_start(
  mln_runtime runtime, mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_regions_merge_database_start(
  mln_runtime runtime, const char* side_database_path,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_update_metadata_start(
  mln_runtime runtime, mln_offline_region_id region_id, const uint8_t* metadata,
  size_t metadata_size, mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_get_status_start(
  mln_runtime runtime, mln_offline_region_id region_id,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_set_observed_start(
  mln_runtime runtime, mln_offline_region_id region_id, bool observed,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_set_download_state_start(
  mln_runtime runtime, mln_offline_region_id region_id, uint32_t state,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_invalidate_start(
  mln_runtime runtime, mln_offline_region_id region_id,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_delete_start(
  mln_runtime runtime, mln_offline_region_id region_id,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_create_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_snapshot* out_region
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_get_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_snapshot* out_region, bool* out_found
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_regions_list_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_list* out_regions
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_regions_merge_database_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_list* out_regions
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_update_metadata_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_snapshot* out_region
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_get_status_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_status* out_status
) MLN_NOEXCEPT;
MLN_API mln_status mln_offline_region_snapshot_get(
  mln_offline_region_snapshot snapshot, mln_offline_region_info* out_info
) MLN_NOEXCEPT;
MLN_API void mln_offline_region_snapshot_destroy(
  mln_offline_region_snapshot snapshot
) MLN_NOEXCEPT;
MLN_API mln_status mln_offline_region_list_count(
  mln_offline_region_list list, size_t* out_count
) MLN_NOEXCEPT;
MLN_API mln_status mln_offline_region_list_get(
  mln_offline_region_list list, size_t index, mln_offline_region_info* out_info
) MLN_NOEXCEPT;
MLN_API void mln_offline_region_list_destroy(
  mln_offline_region_list list
) MLN_NOEXCEPT;
MLN_API mln_map_options mln_map_options_default(void) MLN_NOEXCEPT;
MLN_API mln_status mln_map_create(
  mln_runtime runtime, const mln_map_options* options, mln_map* out_map
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_request_repaint(mln_map map) MLN_NOEXCEPT;
MLN_API mln_status mln_map_request_still_image(mln_map map) MLN_NOEXCEPT;
MLN_API mln_status mln_map_destroy(mln_map map) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_set_style_url(mln_map map, const char* url) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_set_style_json(mln_map map, const char* json) MLN_NOEXCEPT;