include/maplibre_native_c/runtime.h


typedef uint64_t mln_offline_operation_id;
typedef struct mln_resource_transform {
  uint32_t size;
  mln_resource_transform_callback callback;
  void* user_data;
} mln_resource_transform;
MLN_API mln_status mln_runtime_set_resource_transform(
  mln_runtime runtime, const mln_resource_transform* transform
) MLN_NOEXCEPT;
MLN_API mln_status
mln_runtime_clear_resource_transform(mln_runtime runtime) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_run_ambient_cache_operation_start(
  mln_runtime runtime, uint32_t operation,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_operation_discard(
  mln_runtime runtime, mln_offline_operation_id operation_id
) MLN_NOEXCEPT;