bindings/vala/vapi/maplibre-native-c.vapi


    [CCode (cname = "mln_runtime_set_resource_transform")]
    public static Status runtime_set_resource_transform (Runtime runtime, ResourceTransform* transform);

    [CCode (cname = "mln_runtime_clear_resource_transform")]
    public static Status runtime_clear_resource_transform (Runtime runtime);

    [CCode (cname = "mln_runtime_run_ambient_cache_operation_start")]
    public static Status runtime_run_ambient_cache_operation_start (Runtime runtime, uint32 operation, out OfflineOperationId out_operation_id);

    [CCode (cname = "mln_runtime_offline_operation_discard")]
    public static Status runtime_offline_operation_discard (Runtime runtime, OfflineOperationId operation_id);

    [CCode (cname = "mln_runtime_offline_region_create_start")]
    public static Status runtime_offline_region_create_start (Runtime runtime, OfflineRegionDefinition* definition, uint8* metadata, size_t metadata_size, out OfflineOperationId out_operation_id);

    [CCode (cname = "mln_runtime_offline_region_get_start")]
    public static Status runtime_offline_region_get_start (Runtime runtime, OfflineRegionId region_id, out OfflineOperationId out_operation_id);

    [CCode (cname = "mln_runtime_offline_regions_list_start")]
    public static Status runtime_offline_regions_list_start (Runtime runtime, out OfflineOperationId out_operation_id);

    [CCode (cname = "mln_runtime_offline_regions_merge_database_start")]
    public static Status runtime_offline_regions_merge_database_start (Runtime runtime, string side_database_path, out OfflineOperationId out_operation_id);

    [CCode (cname = "mln_runtime_offline_region_update_metadata_start")]
    public static Status runtime_offline_region_update_metadata_start (Runtime runtime, OfflineRegionId region_id, uint8* metadata, size_t metadata_size, out OfflineOperationId out_operation_id);

    [CCode (cname = "mln_runtime_offline_region_get_status_start")]
    public static Status runtime_offline_region_get_status_start (Runtime runtime, OfflineRegionId region_id, out OfflineOperationId out_operation_id);

    [CCode (cname = "mln_runtime_offline_region_set_observed_start")]
    public static Status runtime_offline_region_set_observed_start (Runtime runtime, OfflineRegionId region_id, bool observed, out OfflineOperationId out_operation_id);

    [CCode (cname = "mln_runtime_offline_region_set_download_state_start")]
    public static Status runtime_offline_region_set_download_state_start (Runtime runtime, OfflineRegionId region_id, uint32 state, out OfflineOperationId out_operation_id);

    [CCode (cname = "mln_runtime_offline_region_invalidate_start")]
    public static Status runtime_offline_region_invalidate_start (Runtime runtime, OfflineRegionId region_id, out OfflineOperationId out_operation_id);

    [CCode (cname = "mln_runtime_offline_region_delete_start")]
    public static Status runtime_offline_region_delete_start (Runtime runtime, OfflineRegionId region_id, out OfflineOperationId out_operation_id);

    [CCode (cname = "mln_runtime_offline_region_create_take_result")]
    public static Status runtime_offline_region_create_take_result (Runtime runtime, OfflineOperationId operation_id, out OfflineRegionSnapshot? out_region);

    [CCode (cname = "mln_runtime_offline_region_get_take_result")]
    public static Status runtime_offline_region_get_take_result (Runtime runtime, OfflineOperationId operation_id, out OfflineRegionSnapshot? out_region, out bool out_found);

    [CCode (cname = "mln_runtime_offline_regions_list_take_result")]
    public static Status runtime_offline_regions_list_take_result (Runtime runtime, OfflineOperationId operation_id, out OfflineRegionList? out_regions);

    [CCode (cname = "mln_runtime_offline_regions_merge_database_take_result")]
    public static Status runtime_offline_regions_merge_database_take_result (Runtime runtime, OfflineOperationId operation_id, out OfflineRegionList? out_regions);

    [CCode (cname = "mln_runtime_offline_region_update_metadata_take_result")]
    public static Status runtime_offline_region_update_metadata_take_result (Runtime runtime, OfflineOperationId operation_id, out OfflineRegionSnapshot? out_region);

    [CCode (cname = "mln_runtime_offline_region_get_status_take_result")]
    public static Status runtime_offline_region_get_status_take_result (Runtime runtime, OfflineOperationId operation_id, OfflineRegionStatus* out_status);

    [CCode (cname = "mln_offline_region_snapshot_get")]
    public static Status offline_region_snapshot_get (OfflineRegionSnapshot snapshot, OfflineRegionInfo* out_info);

    [CCode (cname = "mln_offline_region_snapshot_destroy")]
    public static void offline_region_snapshot_destroy (OfflineRegionSnapshot snapshot);

    [CCode (cname = "mln_offline_region_list_count")]
    public static Status offline_region_list_count (OfflineRegionList list, out size_t out_count);

    [CCode (cname = "mln_offline_region_list_get")]
    public static Status offline_region_list_get (OfflineRegionList list, size_t index, OfflineRegionInfo* out_info);

    [CCode (cname = "mln_offline_region_list_destroy")]
    public static void offline_region_list_destroy (OfflineRegionList list);

    [CCode (cname = "mln_map_options_default")]
    public static MapOptions map_options_default ();

    [CCode (cname = "mln_map_viewport_options_default")]
    public static MapViewportOptions map_viewport_options_default ();

    [CCode (cname = "mln_map_tile_options_default")]
    public static MapTileOptions map_tile_options_default ();

    [CCode (cname = "mln_map_create")]
    public static Status map_create (Runtime runtime, MapOptions* options, out Map map);

    [CCode (cname = "mln_map_destroy")]
    public static Status map_destroy (Map map);

    [CCode (cname = "mln_map_request_repaint")]
    public static Status map_request_repaint (Map map);

    [CCode (cname = "mln_map_request_still_image")]
    public static Status map_request_still_image (Map map);

    [CCode (cname = "mln_map_set_style_url")]
    public static Status map_set_style_url (Map map, string url);

    [CCode (cname = "mln_map_set_style_json")]
    public static Status map_set_style_json (Map map, string json);

    [CCode (cname = "mln_map_set_debug_options")]
    public static Status map_set_debug_options (Map map, uint32 options);

    [CCode (cname = "mln_map_get_debug_options")]
    public static Status map_get_debug_options (Map map, out uint32 out_options);

    [CCode (cname = "mln_map_set_rendering_stats_view_enabled")]
    public static Status map_set_rendering_stats_view_enabled (Map map, bool enabled);

    [CCode (cname = "mln_map_get_rendering_stats_view_enabled")]
    public static Status map_get_rendering_stats_view_enabled (Map map, out bool out_enabled);

    [CCode (cname = "mln_map_is_fully_loaded")]
    public static Status map_is_fully_loaded (Map map, out bool out_loaded);

    [CCode (cname = "mln_map_dump_debug_logs")]
    public static Status map_dump_debug_logs (Map map);

    [CCode (cname = "mln_map_get_viewport_options")]
    public static Status map_get_viewport_options (Map map, MapViewportOptions* out_options);

    [CCode (cname = "mln_map_set_viewport_options")]
    public static Status map_set_viewport_options (Map map, MapViewportOptions* options);

    [CCode (cname = "mln_map_get_tile_options")]
    public static Status map_get_tile_options (Map map, MapTileOptions* out_options);

    [CCode (cname = "mln_map_set_tile_options")]
    public static Status map_set_tile_options (Map map, MapTileOptions* options);

    [CCode (cname = "mln_camera_options_default")]
    public static CameraOptions camera_options_default ();

    [CCode (cname = "mln_animation_options_default")]
    public static AnimationOptions animation_options_default ();

    [CCode (cname = "mln_camera_fit_options_default")]
    public static CameraFitOptions camera_fit_options_default ();

    [CCode (cname = "mln_bound_options_default")]
    public static BoundOptions bound_options_default ();

    [CCode (cname = "mln_free_camera_options_default")]
    public static FreeCameraOptions free_camera_options_default ();

    [CCode (cname = "mln_projection_mode_default")]
    public static ProjectionMode projection_mode_default ();

    [CCode (cname = "mln_map_get_camera")]
    public static Status map_get_camera (Map map, CameraOptions* out_camera);

    [CCode (cname = "mln_map_jump_to")]
    public static Status map_jump_to (Map map, CameraOptions* camera);

    [CCode (cname = "mln_map_ease_to")]
    public static Status map_ease_to (Map map, CameraOptions* camera, AnimationOptions* animation);

    [CCode (cname = "mln_map_fly_to")]
    public static Status map_fly_to (Map map, CameraOptions* camera, AnimationOptions* animation);

    [CCode (cname = "mln_map_move_by")]
    public static Status map_move_by (Map map, double delta_x, double delta_y);

    [CCode (cname = "mln_map_move_by_animated")]
    public static Status map_move_by_animated (Map map, double delta_x, double delta_y, AnimationOptions* animation);

    [CCode (cname = "mln_map_scale_by")]
    public static Status map_scale_by (Map map, double scale, ScreenPoint* anchor);

    [CCode (cname = "mln_map_scale_by_animated")]
    public static Status map_scale_by_animated (Map map, double scale, ScreenPoint* anchor, AnimationOptions* animation);

    [CCode (cname = "mln_map_rotate_by")]
    public static Status map_rotate_by (Map map, ScreenPoint first, ScreenPoint second);

    [CCode (cname = "mln_map_rotate_by_animated")]
    public static Status map_rotate_by_animated (Map map, ScreenPoint first, ScreenPoint second, AnimationOptions* animation);

    [CCode (cname = "mln_map_pitch_by")]
    public static Status map_pitch_by (Map map, double pitch);

    [CCode (cname = "mln_map_pitch_by_animated")]
    public static Status map_pitch_by_animated (Map map, double pitch, AnimationOptions* animation);

    [CCode (cname = "mln_map_cancel_transitions")]
    public static Status map_cancel_transitions (Map map);

    [CCode (cname = "mln_map_camera_for_geometry")]
    public static Status map_camera_for_geometry (Map map, Geometry* geometry, CameraFitOptions* fit_options, CameraOptions* out_camera);

    [CCode (cname = "mln_map_camera_for_lat_lng_bounds")]
    public static Status map_camera_for_lat_lng_bounds (Map map, LatLngBounds bounds, CameraFitOptions* fit_options, CameraOptions* out_camera);

    [CCode (cname = "mln_map_camera_for_lat_lngs")]
    public static Status map_camera_for_lat_lngs (Map map, LatLng* coordinates, size_t coordinate_count, CameraFitOptions* fit_options, CameraOptions* out_camera);

    [CCode (cname = "mln_map_lat_lng_bounds_for_camera")]
    public static Status map_lat_lng_bounds_for_camera (Map map, CameraOptions* camera, out LatLngBounds out_bounds);

    [CCode (cname = "mln_map_lat_lng_bounds_for_camera_unwrapped")]
    public static Status map_lat_lng_bounds_for_camera_unwrapped (Map map, CameraOptions* camera, out LatLngBounds out_bounds);

    [CCode (cname = "mln_map_get_bounds")]
    public static Status map_get_bounds (Map map, BoundOptions* out_options);

    [CCode (cname = "mln_map_set_bounds")]
    public static Status map_set_bounds (Map map, BoundOptions* options);

    [CCode (cname = "mln_map_get_free_camera_options")]
    public static Status map_get_free_camera_options (Map map, FreeCameraOptions* out_options);

    [CCode (cname = "mln_map_set_free_camera_options")]
    public static Status map_set_free_camera_options (Map map, FreeCameraOptions* options);

    [CCode (cname = "mln_map_get_projection_mode")]
    public static Status map_get_projection_mode (Map map, ProjectionMode* out_mode);

    [CCode (cname = "mln_map_set_projection_mode")]
    public static Status map_set_projection_mode (Map map, ProjectionMode* mode);
